fixed footer wrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,12 +166,18 @@ form .dropdown {
 footer {
   background: #D7D7D7;
   color: #0D2A40;
-  text-align: center;
-  margin: 0;
-  overflow: auto;
+  margin: 0 auto;
   padding: 1em;
+  width: 100vw;
 }
-footer a {
+footer p {
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+footer p a {
   font-size: 2.5em;
   color: #0D2A40;
   padding: 0 50px;
